// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryList should render and display a caption 1`] = `
<div>
  <e
    title="Willkommen"
  />
  <e
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": "test content",
      }
    }
  />
  <div
    className="list"
  >
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": undefined,
          "_content": undefined,
          "_id": 35,
          "_lastUpdate": undefined,
          "_order": undefined,
          "_parentPath": undefined,
          "_path": undefined,
          "_thumbnail": undefined,
          "_title": "Willkommen in Augsburg",
        }
      }
      key="35"
    >
      <Component />
    </CategoryListItem>
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": undefined,
          "_content": undefined,
          "_id": 35,
          "_lastUpdate": undefined,
          "_order": undefined,
          "_parentPath": undefined,
          "_path": undefined,
          "_thumbnail": undefined,
          "_title": "Willkommen in Augsburg",
        }
      }
      key="35"
    />
  </div>
</div>
`;

exports[`CategoryList should render and not display a caption 1`] = `
<div>
  <e
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <div
    className="list"
  >
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": undefined,
          "_content": undefined,
          "_id": 35,
          "_lastUpdate": undefined,
          "_order": undefined,
          "_parentPath": undefined,
          "_path": undefined,
          "_thumbnail": undefined,
          "_title": "Willkommen in Augsburg",
        }
      }
      key="35"
    >
      <Component />
    </CategoryListItem>
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": undefined,
          "_content": undefined,
          "_id": 35,
          "_lastUpdate": undefined,
          "_order": undefined,
          "_parentPath": undefined,
          "_path": undefined,
          "_thumbnail": undefined,
          "_title": "Willkommen in Augsburg",
        }
      }
      key="35"
    />
  </div>
</div>
`;
